# nekostring

./: .gitignore  Makefile.am  README  README.md  configure.ac
gui/: Makefile.am  callbacks.c  callbacks.h  interface.c  interface.h  main.c  neko_ports.c  support.c  support.h  widgets.h
src/: Makefile.am  gui_data.h  gui_friendly_patches.c  minblep_tables.c  neko-dssi.c  neko.h  neko_data.c  neko_ensemble.c  neko_ports.c  neko_ports.h  neko_synth.c  neko_synth.h  neko_types.h  neko_voice.c  neko_voice.h  neko_voice_render.c
test/: README.txt  nekostringdeath.mid
